--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  pool: 5
+  username: postgres
+  password:
+  host: db-api
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
